examples/parser/invalid/keyword_var_definitions.xana

int :: double

def main() do
end